force-app/main/default/objects/Knowledge__kav/fields/Action_Details__c.field-meta.xml
<CustomField>
    <fullName>Action_Details__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>What the team needs to do and by when. Required if Action Required = True.</description>
    <inlineHelpText>What the team needs to do and by when. Required if Action Required = True.</inlineHelpText>
    <label>Action Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>