force-app/main/default/objects/Knowledge__kav/fields/Action_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Due_Date__c</fullName>
    <label>Action Due Date</label>
    <type>Date</type>
</CustomField>