force-app/main/default/objects/Knowledge__kav/fields/Action_Owners__c.field-meta.xml
<CustomField>
    <fullName>Action_Owners__c</fullName>
    <label>Action Owners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>