force-app/main/default/objects/Knowledge__kav/fields/Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Action_Required__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>If checked, fill in Action Details and Action Owner. Penny surfaces in CEO/COO briefings.</description>
    <inlineHelpText>If checked, fill in Action Details and Action Owner. Penny surfaces in CEO/COO briefings.</inlineHelpText>
    <label>Action Required</label>
    <type>Checkbox</type>
</CustomField>