force-app/main/default/objects/Knowledge__kav/fields/Applies_To__c.field-meta.xml
<CustomField>
    <fullName>Applies_To__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Penny uses for role-based surfacing via GetRelevantKnowledge</description>
    <inlineHelpText>Penny uses for role-based surfacing via GetRelevantKnowledge</inlineHelpText>
    <label>Applies To</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Admin</fullName>
            </value>
            <value>
                <fullName>Learner</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>