force-app/main/default/objects/Knowledge__kav/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <defaultValue>&quot;Internal (TT Team)&quot;</defaultValue>
    <label>Audience</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal (TT Team)</fullName>
            </value>
            <value>
                <fullName>Learners</fullName>
            </value>
            <value>
                <fullName>Clients</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>