force-app/main/default/objects/Knowledge__kav/fields/Build_Package_URL__c.field-meta.xml
<CustomField>
    <fullName>Build_Package_URL__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Link to the sprint XLSX in Google Drive. One-click to full technical spec.</description>
    <inlineHelpText>Link to the sprint XLSX in Google Drive. One-click to full technical spec.</inlineHelpText>
    <label>Build Package URL</label>
    <type>Url</type>
</CustomField>