force-app/main/default/objects/Knowledge__kav/fields/Estimated_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time_Minutes__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <label>Estimated Time Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>