force-app/main/default/objects/Knowledge__kav/fields/GitHub_Release_Tag__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Release_Tag__c</fullName>
    <label>GitHub Release Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>