force-app/main/default/objects/Knowledge__kav/fields/Known_Issues__c.field-meta.xml
<CustomField>
    <fullName>Known_Issues__c</fullName>
    <label>Known Issues</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>