force-app/main/default/objects/Knowledge__kav/fields/Last_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reviewed_Date__c</fullName>
    <description>Set when authorized approver confirms content is accurate</description>
    <inlineHelpText>Set when authorized approver confirms content is accurate</inlineHelpText>
    <label>Last Reviewed Date</label>
    <type>Date</type>
</CustomField>