force-app/main/default/objects/Knowledge__kav/fields/Last_Tested_Version__c.field-meta.xml
<CustomField>
    <fullName>Last_Tested_Version__c</fullName>
    <label>Last Tested Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>