force-app/main/default/objects/Knowledge__kav/fields/Major_Features__c.field-meta.xml
<CustomField>
    <fullName>Major_Features__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Significant new functionality. Navy header.</description>
    <inlineHelpText>Significant new functionality. Navy header.</inlineHelpText>
    <label>Major Features</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>