force-app/main/default/objects/Knowledge__kav/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <description>General summary of the article</description>
    <inlineHelpText>General summary of the article</inlineHelpText>
    <label>Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>