force-app/main/default/objects/Knowledge__kav/fields/Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Prerequisites__c</fullName>
    <label>Prerequisites</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>