force-app/main/default/objects/Knowledge__kav/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Date changes were released to production</description>
    <inlineHelpText>Date changes were released to production</inlineHelpText>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>