force-app/main/default/objects/Knowledge__kav/fields/Release_Version__c.field-meta.xml
<CustomField>
    <fullName>Release_Version__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Optional. Format: v1.2.0.</description>
    <inlineHelpText>Optional. Format: v1.2.0.</inlineHelpText>
    <label>Release Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>