force-app/main/default/objects/Knowledge__kav/fields/Released_By__c.field-meta.xml
<CustomField>
    <fullName>Released_By__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who deployed to Production.</description>
    <inlineHelpText>Who deployed to Production.</inlineHelpText>
    <label>Released By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>