force-app/main/default/objects/Knowledge__kav/fields/Review_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Review_Frequency__c</fullName>
    <defaultValue>&quot;Quarterly&quot;</defaultValue>
    <label>Review Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>As Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>