force-app/main/default/objects/Knowledge__kav/fields/Small_Enhancements__c.field-meta.xml
<CustomField>
    <fullName>Small_Enhancements__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Quality-of-life improvements. Blue header.</description>
    <inlineHelpText>Quality-of-life improvements. Blue header.</inlineHelpText>
    <label>Small Enhancements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>