force-app/main/default/objects/Knowledge__kav/fields/Sprint_Number__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Number__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Format: 2026.06b. Penny queries by sprint.</description>
    <inlineHelpText>Format: 2026.06b. Penny queries by sprint.</inlineHelpText>
    <label>Sprint Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>