force-app/main/default/objects/Knowledge__kav/fields/Tango_URL__c.field-meta.xml
<CustomField>
    <fullName>Tango_URL__c</fullName>
    <label>Tango URL</label>
    <type>Url</type>
</CustomField>