force-app/main/default/objects/Knowledge__kav/fields/Whats_Next__c.field-meta.xml
<CustomField>
    <fullName>Whats_Next__c</fullName>
    <label>What&apos;s Next</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>