force-app/main/default/objects/Knowledge__kav/fields/You_Asked_We_Built__c.field-meta.xml
<CustomField>
    <fullName>You_Asked_We_Built__c</fullName>
    <businessOwnerGroup>Leadership</businessOwnerGroup>
    <complianceGroup>NA</complianceGroup>
    <description>Changes from direct team feedback. Teal header.</description>
    <inlineHelpText>Changes from direct team feedback. Teal header.</inlineHelpText>
    <label>You Asked We Built</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>